set state of ag grid

--- a/src/app/comman/components/UI/button/button.component.html
+++ b/src/app/comman/components/UI/button/button.component.html
@@ -1,1 +1,5 @@
- <button style="width: 100%;" [class]="class" (click)="onClick($event)" mat-raised-button color="primary" >{{label}}</button>
+
+ <button [type]="type" [class]="class" (click)="onClick($event)" mat-raised-button color="primary" >  
+    <mat-icon *ngIf="icon">{{ icon }}</mat-icon>
+    {{label}}
+</button>
