--- a/src/app/private/change-password/change-password.component.html
+++ b/src/app/private/change-password/change-password.component.html
@@ -1,15 +1,12 @@
-<div class="auth-wrapper v3">
-  <div class="auth-form">
-    <div
-      class="d-flex justify-content-between align-items-end mb-4"
-      style="margin-left: 25px"
-    >
-      <h3 class="mb-0"><b>Change Password</b></h3>
+<div class="container ">
+  <div class="card shadow-sm">
+    <div class="card-header d-flex justify-content-between align-items-center">
+      <h3 class="mb-0a">Change Password</h3>
+
     </div>
-    <hr />
-    <div class="card my-5 change-password">
+    <div class="card-body change-password">
       <form [formGroup]="ChangePasswordForm">
-        <div class="card-body">
+        
           <div class="row">
             <div class="form-group mb-3">
               <app-input-box
@@ -63,27 +60,18 @@
                 }
               </div>
             </div>
+            
 
-            <div class="col-md-6">
-              <div class="d-grid mt-3">
+              <div class="change-password" style="display: flex; justify-content: center;">
                 <app-button
-                  [class]="'btn btn-primary'"
+                  [class]="'btn btn-primary project-btn'"
                   (click)="ChangePassword()"
                   [label]="' Change Password'"
+                  icon="lock_reset"
                 />
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="d-grid mt-3">
-                <app-button
-                  [class]="'btn btn-primary'"
-                  (click)="onBack()"
-                  [label]="'Back'"
-                />
-              </div>
-            </div>
+
           </div>
-        </div>
       </form>
     </div>
   </div>
