--- a/src/app/private/change-password/change-password.component.scss
+++ b/src/app/private/change-password/change-password.component.scss
@@ -1,4 +1,7 @@
 .change-password {
     width: 40%;
-    margin-left: 345px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
