--- a/src/app/private/my-profile/my-profile.component.html
+++ b/src/app/private/my-profile/my-profile.component.html
@@ -14,6 +14,7 @@
                   [class]="'btn btn-primary'"
                   (click)="onEdit()"
                   [label]="'Edit'"
+                  icon="edit"
                 />
           </div>
           
