--- a/src/app/private/update-profile/update-profile.component.html
+++ b/src/app/private/update-profile/update-profile.component.html
@@ -130,11 +130,12 @@
                   </div>
                 </div>
               </div>
-              <div class="d-grid mt-3">
+              <div class="d-grid mt-3 project-btn-wrapper">
                 <app-button
                   [class]="'btn btn-primary'"
                   (click)="updateData()"
                   [label]="'Update Profile'"
+                  icon="verified"
                 />
               </div>
             </div>
