--- a/src/scss/themes/layouts/navbar/navbar.scss
+++ b/src/scss/themes/layouts/navbar/navbar.scss
@@ -2,7 +2,7 @@
   background: var(--pc-header-background);
   color: var(--pc-header-color);
   min-height: $header-height;
-  border-bottom: 1px solid rgb(240, 240, 240);
+  border-bottom: 1px solid #92949d;;
   position: fixed;
   left: $sidebar-width;
   right: 0;
