--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
       class="logo logo-icon logo-lg"
     />
   </a>
-  <h4 style="margin-top: 2px">Mantis</h4>
+  <h4 style="margin-top: 2px">Angular</h4>
 </div>
 
 <div class="auth-main">
@@ -21,7 +21,7 @@
                 >Don't have an account?</a
               >
             </div>
-            <div class="form-group">
+            <div class="form-group-login">
               <app-input-box
                 label="Email"
                 type="text"
@@ -39,7 +39,7 @@
                 }
               </div>
             </div>
-            <div class="form-group mb-3">
+            <div class="form-group-login">
               <app-input-box
                 label="Password"
                 type="password"
@@ -58,9 +58,9 @@
               </div>
             </div>
 
-            <div class="d-grid mt-4">
+            <div class="project-btn-wrapper">
               <app-button
-                [class]="'btn btn-primary'"
+                [class]="'btn btn-primary login-btn'"
                 (click)="onLogin()"
                 [label]="'Login'"
               />
@@ -68,31 +68,6 @@
           </div>
         </form>
       </div>
-      <div class="auth-footer row">
-        <div class="col my-1">
-          <p class="m-0">
-            Copyright ©
-            <a href="https://codedthemes.com/" target="_blank">CodedThemes</a>
-          </p>
         </div>
-        <div class="col-auto my-1">
-          <ul class="list-inline footer-link mb-0">
-            <li class="list-inline-item">
-              <a href="https://codedthemes.com/" target="_blank">Home</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://codedthemes.com/privacy-policy/" target="_blank"
-                >Privacy Policy</a
-              >
-            </li>
-            <li class="list-inline-item">
-              <a href="https://codedthemes.support-hub.io/" target="_blank"
-                >Contact us</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
