--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,13 +6,13 @@
       class="logo logo-icon logo-lg"
     />
   </a>
-  <h4 style="margin-top: 2px">Mantis</h4>
+  <h4 style="margin-top: 2px">Angular</h4>
 </div>
 
 <div class="auth-main">
   <div class="auth-wrapper v3">
     <div class="auth-form">
-            <div class="card my-5">
+      <div class="card my-5">
         <form [formGroup]="RegisterForm">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-end mb-4">
@@ -22,93 +22,79 @@
               >
             </div>
             <div class="row">
-             
-                <div class="form-group mb-3">
-                  <app-input-box
-                    label="First name"
-                    type="text"
-                    placeholder="Enter First Name"
-                    name="user_first_name"
-                    formControlName="firstName"
-                  />
-                  <div class="validation-message">
-                    @if (RegisterForm.controls['firstName'].invalid &&
-                    RegisterForm.controls['firstName'].touched) {
-                    <span>First name is required</span>
-                    }
-                 
+              <div class="form-group-register">
+                <app-input-box
+                  label="First name"
+                  type="text"
+                  placeholder="Enter First Name"
+                  name="user_first_name"
+                  formControlName="firstName"
+                />
+                <div class="validation-message">
+                  @if (RegisterForm.controls['firstName'].invalid &&
+                  RegisterForm.controls['firstName'].touched) {
+                  <span>First name is required</span>
+                  }
                 </div>
               </div>
-        
-                <div class="form-group mb-3">
-                  <app-input-box
-                    label="Last name"
-                    type="text"
-                    placeholder="Enter Last Name"
-                    name="user_first_name"
-                    formControlName="lastName"
-                  />
-                  <div class="validation-message">
-                    @if (RegisterForm.controls['lastName'].invalid &&
-                    RegisterForm.controls['lastName'].touched) {
-                    <span>Last name is required</span>
-                    }
-                  </div>
+
+              <div class="form-group-register">
+                <app-input-box
+                  label="Last name"
+                  type="text"
+                  placeholder="Enter Last Name"
+                  name="user_first_name"
+                  formControlName="lastName"
+                />
+                <div class="validation-message">
+                  @if (RegisterForm.controls['lastName'].invalid &&
+                  RegisterForm.controls['lastName'].touched) {
+                  <span>Last name is required</span>
+                  }
                 </div>
+              </div>
+
+              <div class="form-group-register">
+                <app-input-box
+                  label="Email"
+                  type="test"
+                  placeholder="Enter Email"
+                  name="user_email"
+                  formControlName="email"
+                />
              
-            
-                <div class="form-group mb-3">
-                  <app-input-box
-                    label="Email"
-                    type="test"
-                    placeholder="Enter Email"
-                    name="user_email"
-                    formControlName="email"
-                  />
-                  <div
-                    *ngIf="
-                      RegisterForm.controls['email'].invalid &&
-                      (RegisterForm.controls['email'].dirty ||
-                        RegisterForm.controls['email'].touched)
-                    "
-                    class="validation-message"
-                  >
-                    <div
-                      *ngIf="RegisterForm.controls['email'].errors?.['required']"
-                    >
-                      Email is required.
-                    </div>
-                    <div
-                      *ngIf="RegisterForm.controls['email'].errors?.['email']"
-                    >
-                      Please enter a valid email.
-                    </div>
-                  </div>
+                <div class="validation-message">
+                  @if (RegisterForm.controls['email'].errors?.['required']) {
+                  <span>Email is required.</span>
+                  } @if (RegisterForm.controls['email'].errors?.['email']) {
+                  <span>Please enter a valid email.</span>
+                  }
                 </div>
-             
-          
-                <div class="form-group mb-3">
-                  <app-input-box
-                    [label]="'Password'"
-                    [type]="'password'"
-                    [placeholder]="'Enter Password'"
-                    [name]="'user_password'"
-                    [formControlName]="'password'"
-                  />
-                  <div class="validation-message">
-                    @if (RegisterForm.controls['password'].errors?.['required']
-                    && RegisterForm.controls['password'].touched) {
-                    <span>Password is required</span>
-                    } @else if
-                    (RegisterForm.controls['password'].errors?.['pattern']) {
-                    <span>Password is invalid</span>
-                    }
-                  </div>
+                
+              </div>
+
+              <div class="form-group-register">
+                <app-input-box
+                  [label]="'Password'"
+                  [type]="'password'"
+                  [placeholder]="'Enter Password'"
+                  [name]="'user_password'"
+                  [formControlName]="'password'"
+                />
+                <div class="validation-message">
+                  @if (RegisterForm.controls['password'].errors?.['required'] &&
+                  RegisterForm.controls['password'].touched) {
+                  <span>Password is required</span>
+                  } @else if
+                  (RegisterForm.controls['password'].errors?.['pattern']) {
+                  <span>Password is invalid</span>
+                  }
                 </div>
-        
-              <div class="d-grid mt-3">
+              </div>
+
+              <div class="project-btn-wrapper">
                 <app-button
-                  [class]="'btn btn-primary'"
+                  [class]="'btn btn-primary login-btn'"
                   (click)="onRegister()"
                   [label]="'Create Account'"
                 />
