--- a/src/app/comman/components/UI/select-dropdown/select-dropdown.component.html
+++ b/src/app/comman/components/UI/select-dropdown/select-dropdown.component.html
@@ -1,8 +1,28 @@
 <mat-form-field appearance="fill" style="width: 100%;">
-  <mat-label >{{label}}<span class="danger">*</span></mat-label>
-  <mat-select [(value)]="value" (selectionChange)="onInputChange($event.value)">
-    @for( option of options;track option.value){
+  <mat-label>{{label}}<span class="danger">*</span></mat-label>
+  @if(!searchSelect){
+  <mat-select
+  [(value)]="value"
+  (selectionChange)="onInputChange($event.value)"
+  >
+ 
+ 
+     @for( option of filteredOptions ;track option.value){
     <mat-option [value]="option.value">{{ option.display }}</mat-option>
     }
   </mat-select>
+}
+@else {
+<input matInput placeholder="Search"
+       (input)="filterOptionsRaw($event)"
+       [matAutocomplete]="auto"
+         [value]="getDisplayText(value)" >
+    <mat-autocomplete requireSelection #auto="matAutocomplete" (optionSelected)="onInputChange($event.option.value)">
+      @for (option of filteredOptions; track option.value) {
+        <mat-option [value]="option.value">{{option.display}}</mat-option>
+      }
+      </mat-autocomplete>
+}
 </mat-form-field>
+
+
