--- a/src/app/private/header/header.component.html
+++ b/src/app/private/header/header.component.html
@@ -3,11 +3,9 @@
     <div class="pc-mob-drp">
       <ul class="list-unstyled">
         <li class="pc-h-item pc-sidebar-collapse">
-            @if (navCollapsed === true) {
+            
             <mat-icon (click)="navCollapse()">menu</mat-icon>
-            } @else {
-           <mat-icon (click)="navCollapse()">menu</mat-icon>
-            }
+            
         </li>
       </ul>
     </div>
@@ -43,13 +41,13 @@
                   />
                 </div>
                 <div class="flex-grow-1 ms-3 text-start">
-                  <h6 class="mb-0">
+                  <h6 class="mb-0 align-center user-name">
                     {{ data?.user_first_name }} {{ data?.user_last_name }}
                   </h6>
                 </div>
-                <a href="javascript:" class="bg-transparent" 
+                <!-- <a href="javascript:" class="bg-transparent" 
                   ><mat-icon (click)="onLogout()">logout</mat-icon>
-                </a>
+                </a> -->
               </div>
             </div>
             <ul ngbNav #nav="ngbNav" class="mat-tabs">
