--- a/src/app/private/projects/projects.component.scss
+++ b/src/app/private/projects/projects.component.scss
@@ -1,12 +1,10 @@
-.list-projects {
-  margin-top: 40px;
-}
+
 .project-header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+  // height: 20px;
 }
 .action-buttons {
   display: flex;
@@ -15,23 +13,30 @@
 }
 
 .search-input {
-  height: 50px;
-  width: 80%;
-  margin-left: 100px;
-  // background-color: #cbc9c9;
+  height: 40px;
+  width: 350px;
   border: 1px solid #a7a7a7;
   border-radius: 5px;
+  padding-left: 10px;
+  font-size: 13px;
 }
 
 .search-project {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+.search-icon {
+  position: absolute;
+  right: 140px;
+  color: #888;
+  pointer-events: none;
+  top: 18px;
 }
 
 .column-settings-sidebar {
   position: fixed;
-  right: -300px;
+  right: -380px;
   top: 0;
-  width: 300px;
+  width: 23%;
   height: 100%;
   background: #fff;
   border-left: 1px solid #ccc;
@@ -45,7 +50,11 @@
     right: 0;
   }
 }
-
+.sidebar-btn-icon {
+    display: flex;
+    margin-bottom: 5px;
+    gap: 15px;
+}
 .custonFilter {
   display: flex;
   align-items: center;
@@ -64,7 +73,29 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // margin-bottom: 10px;
+  margin-bottom: 15px;
+  border-bottom: 2px solid #888;
+}
+
+.sidebar-btn {
+    height: 35px;
+}
+.user-sidebar {
+    display: flex;
+    gap: 10px;
+}
+.add-project-btn{
+  height: 40px !important;
+  gap: 5px;
+}
+
+.coded-content{
+  padding-top: 5px !important;
+}
+
+.list-projects{
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 
