--- a/src/scss/themes/layouts/menu/sidebar.scss
+++ b/src/scss/themes/layouts/menu/sidebar.scss
@@ -10,7 +10,6 @@
   display: block;
   height: 100vh;
   color: var(--pc-sidebar-color);
-  border-right: 1px solid rgb(240, 240, 240);
 
   a {
     color: var(--pc-sidebar-color);
@@ -20,6 +19,7 @@
   .navbar-wrapper {
     width: 100%;
     height: 100%;
+    border-right: 1px solid #92949d;
   }
 
   ul {
@@ -116,8 +116,8 @@
 
           > a {
             &:after {
-              content: '\e844';
-              font-family: 'feather';
+              content: "\e844";
+              font-family: "feather";
               font-size: 15px;
               border: none;
               position: absolute;
@@ -131,9 +131,7 @@
             opacity: 0;
             visibility: hidden;
             transform-origin: 50% 50%;
-            transition:
-              transform 0.3s,
-              opacity 0.3s;
+            transition: transform 0.3s, opacity 0.3s;
             transform-style: preserve-3d;
             transform: rotateX(-90deg);
             position: absolute;
@@ -147,7 +145,7 @@
                 display: block;
 
                 &:before {
-                  content: '';
+                  content: "";
                   position: absolute;
                   top: 0;
                   right: 0;
@@ -204,7 +202,7 @@
         }
 
         > a {
-          padding: 12px 16px 12px 28px;
+          padding-top: 12px;
           display: flex;
           align-items: center;
           border-radius: 5px;
@@ -248,7 +246,7 @@
         li {
           position: relative;
           &:before {
-            content: '';
+            content: "";
             position: absolute;
             top: 0;
             right: 0;
